--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="uk.appinvent.popularmovies.MainActivityFragment"
-    tools:layout="@layout/fragment_movies" android:layout_width="fill_parent"
-    android:layout_height="fill_parent" android:configChanges="orientation|screenSize"
-    android:icon="@drawable/movies_icon"
-    />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    tools:context=".MainActivity" tools:ignore="MergeRootFrame" android:configChanges="orientation|screenSize"
+    android:icon="@drawable/movies_icon" />
