--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="title_bg_color">#009688</color>
     <color name="title_wh_color">#ffffff</color>
+    <color name="item_divider_color">#c0c0c0</color>
 </resources>
