--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/movie_detail_container"
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context="uk.appinvent.popularmovies.DetailsActivity" tools:ignore="MergeRootFrame"
     android:icon="@drawable/movies_icon"
