--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,155 +1,199 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="uk.appinvent.popularmovies.DetailsActivity$PlaceholderFragment">
 
-<ScrollView
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <ImageView
-            android:layout_width="170dp" android:id="@+id/movie_poster"
-            android:layout_height="wrap_content" android:src="@drawable/img_movie"
-            android:layout_below="@+id/linearLayout"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="20dp"
-            />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="fill_parent" android:background="@color/title_bg_color"
+            android:id="@+id/linearLayout"
+            android:layout_width="fill_parent"
             android:layout_height="100dp"
-            android:id="@+id/linearLayout">
+            android:background="@color/title_bg_color">
 
-            <TextView android:text="Title" android:id="@+id/movie_title"
+            <TextView
+                android:id="@+id/movie_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:textSize="24sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="Title"
                 android:textColor="@color/title_wh_color"
-                android:layout_gravity="bottom" android:layout_marginBottom="10dp" android:layout_marginLeft="20dp"
-                />
+                android:textSize="24sp" />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content" android:text="2015" android:textSize="16sp"
-            android:layout_height="wrap_content" android:id="@+id/movie_release_date"
 
-            android:layout_marginTop="20dp"
-            android:layout_alignTop="@+id/movie_poster"
-            android:layout_toRightOf="@+id/movie_poster"
-            android:layout_toEndOf="@+id/movie_poster" />
-
-        <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/movie_rating_bar"
-            android:layout_alignTop="@+id/movie_poster"
-            android:layout_toRightOf="@+id/movie_poster"
-            android:layout_toEndOf="@+id/movie_poster"
-            android:layout_marginTop="50dp"
-            style="?android:attr/ratingBarStyleIndicator"
-            android:numStars="5"
-            android:rating="4"
-            android:stepSize="1.0" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8.7/10" android:textSize="10dp" android:id="@+id/movie_rating"
-            android:layout_alignTop="@+id/movie_poster"
-            android:layout_toRightOf="@+id/movie_poster"
-            android:layout_toEndOf="@+id/movie_poster"
-            android:layout_marginTop="100dp"
-
-            />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/movie_poster"
-            android:layout_toRightOf="@+id/movie_poster"
-            android:layout_toEndOf="@+id/movie_poster"
-            android:layout_marginTop="120dp" android:text="@string/favourite_button_title"
-            android:id="@+id/fav_button" />
-        <TextView
-            android:id="@+id/movie_plot"
-            android:text="this is really a long text.."
-
+        <ScrollView
             android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <LinearLayout
+            android:layout_width="fill_parent" android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/movie_poster"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_below="@+id/movie_plot"
-            android:layout_height="1dp"
-            android:background="#000000" >
-        </View>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5">
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/movie_plot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/trailer_title_text_view"
-            android:text="@string/trailer_title"
-            android:textSize="24sp"
+                    <ImageView
+                        android:id="@+id/movie_poster"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/img_movie" />
+                </LinearLayout>
 
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:orientation="vertical"
+                    android:paddingLeft="5dp">
 
-            />
+                    <TextView
+                        android:id="@+id/movie_release_date"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="2015"
+                        android:textSize="16sp" />
 
-        <ListView
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/trailer_title_text_view"
-            android:id="@+id/videos_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:divider="@color/item_divider_color"
-            android:dividerHeight="2dp"
-            >
+                    <RatingBar
+                        android:id="@+id/movie_rating_bar"
+                        style="?android:attr/ratingBarStyleIndicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:numStars="5"
+                        android:rating="4"
+                        android:stepSize="1.0" />
 
-        </ListView>
+                    <TextView
+                        android:id="@+id/movie_rating"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="8.7/10"
+                        android:textSize="10dp" />
+
+                    <Button
+                        android:id="@+id/fav_button"
+                        android:layout_width="wrap_content"
+
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/favourite_button_title" />
 
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/videos_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/reviews_title_text_view"
-            android:text="@string/reviews_title"
-            android:textSize="24sp"
+                </LinearLayout>
+            </LinearLayout>
 
-            android:layout_gravity="bottom" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp"
+            <LinearLayout  android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-            />
+                <TextView
+                    android:id="@+id/movie_plot"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="this is really a long text.." />
 
-        <ListView
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/reviews_title_text_view"
-            android:id="@+id/reviews_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:divider="@color/item_divider_color"
-            android:dividerHeight="2dp"
-            >
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#000000" />
+            </LinearLayout>
 
-        </ListView>
 
-    </RelativeLayout>
-    </ScrollView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/trailer_title_text_view"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+
+                    android:layout_marginTop="10dp"
+                    android:text="@string/trailer_title"
+                    android:textSize="24sp"
+
+                    />
+
+                <ListView
+                    android:id="@+id/videos_list"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:divider="@color/item_divider_color"
+                    android:dividerHeight="2dp">
+
+                </ListView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/reviews_title_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+
+                    android:layout_marginTop="10dp"
+                    android:text="@string/reviews_title"
+                    android:textSize="24sp"
+
+                    />
+
+                <ListView
+                    android:id="@+id/reviews_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:divider="@color/item_divider_color"
+                    android:dividerHeight="2dp">
+
+                </ListView>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        </ScrollView>
+    </LinearLayout>
+
 
 </LinearLayout>
