--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin" android:id="@+id/movie_fragment"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,4 +10,4 @@
         style="@style/movieGridStyle"
         />
 
-</RelativeLayout>
+</FrameLayout>
