--- a/app/src/main/res/layout/movie_list_view_item.xml
+++ b/app/src/main/res/layout/movie_list_view_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/move_poster_image" android:src="@drawable/img_movie"
+    android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/move_poster_image" android:src="@drawable/img_movie"
     >
 </ImageView>
