--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,8 @@
     <style name="movieGridStyle" >
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:columnWidth">150dp</item>
+        <item name="android:columnWidth">140dp</item>
+        <item name="android:rowHeight">140dp</item>
         <item name="android:numColumns">auto_fit</item>
         <item name="android:verticalSpacing">1dp</item>
         <item name="android:horizontalSpacing">1dp</item>
